--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@
     <title>About - Pabla Marmolejo Porftolio UX/UI Designer</title>
     <meta name="description" content="I'm Pabla Marmolejo, a UX/UI designer based in Barcelona, get to know me a little bit.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/img/logo.svg" >
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Lora:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/stylesheet.css">
@@ -123,18 +124,12 @@
                 <div class="project-screen studies">
                     <div class="project-description">
                         <h3>My studies</h3>
-                        <p>
-                            Master in Digital Experience Design - BAU
-                        </p>
-                        <p>
-                            UX/UI Design Course - UXER School
-                        </p>
-                        <p>
-                            Master in Translation Studies - UPF
-                        </p>
-                        <p>
-                            Bachelor’s Degree in Translation - PUCV
-                        </p>
+                        <ul>
+                            <li><p>🎉 Master in Digital Experience Design - BAU</p></li>
+                            <li><p>📕 UX/UI Design Course - UXER School</p></li>
+                            <li><p>🏅 Master in Translation Studies - UPF</p></li>
+                            <li><p>📚 Bachelor’s Degree in Translation - PUCV</p></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="project-screen">
@@ -150,7 +145,7 @@
                             📍 I love languages and travelling. Since 2017, I have lived in Paris, Liège, and now Barcelona. My favourite place in the world is Vitoria, a city in the Basque Country.
                         </p>
                         <p>
-                            🎶 I am a Beatle fan.
+                            🎶 I am a Beatles fan.
                         </p>
                         <p class="last-line">
                             🍰 And I am very good at baking desserts (and eating them too).
