--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Pabla Marmolejo Porftolio UX/UI Designer</title>
     <meta name="description" content="I'm Pabla Marmolejo, a UX/UI designer based in Barcelona, and this is my portfolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/img/logo.svg" >
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Lora:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/stylesheet.css">
