--- a/project-antartica-libros/index.html
+++ b/project-antartica-libros/index.html
@@ -3,6 +3,7 @@
     <title>Antártica Libros - Pabla Marmolejo Porftolio UX/UI Designer</title>
     <meta name="description" content="UX Case Study that deals with an e-commerce site for a book store chain in Chile">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/img/logo.svg" >
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Lora:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/stylesheet.css">
