--- a/project-space-travel/index.html
+++ b/project-space-travel/index.html
@@ -3,6 +3,7 @@
     <title>Space Travel - Pabla Marmolejo Porftolio UX/UI Designer</title>
     <meta name="description" content="UI design project called Space Travel, where I applied typography, color theory, and layout.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/img/logo.svg" >
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Lora:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/stylesheet.css">
