fixed bug button

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div>
                         <h3>Send me an email</h3>
                         <p>pabla.marmolejo@gmail.com</p>
-                        <a href="/assets/img/cv-pabla-marmolejo.pdf">Read my cv</a>
+                        <a href="../assets/img/cv-pabla-marmolejo.pdf">Read my cv</a>
                     </div>
                     <div>
                         <h3>Want to know more?</h3>
@@ -196,6 +196,7 @@
             </div>
         </footer>
     </div> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.8/lottie.min.js" integrity="sha512-w58XJ/0dVbEfZVJoJyBUOTMGBWmIW4jEYJSA0898d2L0Ghpum0FvwK7qTuHhkTctApzrchv3Neli+28ajI4+fg==" crossorigin="anonymous"></script>
     <script src="/assets/interactions.js"></script>
 </body>
 </html>
